--- a/recruit-demo/css/bootstrap.css
+++ b/recruit-demo/css/bootstrap.css
@@ -2811,8 +2811,8 @@ fieldset[disabled] .btn-default.active {
 }
 .btn-primary {
   color: #fff;
-  background-color: #42ce89;
-  border-color: #42ce89;
+  background-color: #ff530d;
+  border-color: #ff530d;
 }
 .btn-primary:hover,
 .btn-primary:focus,
@@ -4092,7 +4092,6 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-default {
-  background-color: #f8f8f8;
   border-color: #e7e7e7;
 }
 .navbar-default .navbar-brand {
@@ -4107,11 +4106,11 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   color: #777;
 }
 .navbar-default .navbar-nav > li > a {
-  color: #777;
+  color: #fff;
 }
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
-  color: #333;
+  color: #ccc;
   background-color: transparent;
 }
 .navbar-default .navbar-nav > .active > a,
