--- a/recruit-demo/css/landing-page.css
+++ b/recruit-demo/css/landing-page.css
@@ -37,7 +37,7 @@ h6 {
 
 .intro-message {
     position: relative;
-    padding-top: 20%;
+    padding-top: 8%;
     padding-bottom: 0%;
 }
 
@@ -45,7 +45,6 @@ h6 {
     margin: 0;
     text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
     font-size: 5em;
-	color:white;
 }
 
 .intro-divider {
@@ -56,7 +55,6 @@ h6 {
 
 .intro-message > h3 {
     text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
-	color:white;
 }
 
 @media(max-width:767px) {
@@ -113,7 +111,7 @@ h6 {
 
 .banner {
     padding: 100px 0;
-    color: #f8f8f8;
+    color: #f8f8f8!important;
     background: url(../img/mount2.jpg) no-repeat center center;
     background-size: cover;
 }
@@ -122,7 +120,7 @@ h6 {
     margin: 0;
     text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
     font-size: 3em;
-	color:white;
+	color:red;
 }
 
 .banner ul {
