--- a/recruit-demo/css/landing-page.css
+++ b/recruit-demo/css/landing-page.css
@@ -31,7 +31,7 @@ h6 {
     padding-bottom: 50px;
     text-align: center;
     color: #f8f8f8;
-    background: url(../img/intro-bg.jpg) no-repeat center center;
+    background: url('https://raw.githubusercontent.com/stoneburnsoftware/gsa-resources/master/recruit-demo/img/banner.jpg') no-repeat center center;
     background-size: cover;
 }
 
