--- a/recruit-demo/css/style.css
+++ b/recruit-demo/css/style.css
@@ -2810,19 +2810,19 @@ blockquote {
 }
 
 .content-box.color-effect-1 {
-	background: #38c782;
+	background: #FF530D;
 }
 
 .content-box.color-effect-2 {
-	background: #0e83cd;
+	background: #FF530D;
 }
 
 .content-box.color-effect-3 {
-	background: #a558a6;
+	background: #FF530D;
 }
 
 .content-box.color-effect-4 {
-	background: #ffba35;
+	background: #FF530D;
 }
 
 .box-icon-wrap {
