--- a/recruit-demo/css/style.css
+++ b/recruit-demo/css/style.css
@@ -2810,19 +2810,19 @@ blockquote {
 }
 
 .content-box.color-effect-1 {
-	background: ##5F6273;
+	background: #5F6273;
 }
 
 .content-box.color-effect-2 {
-	background: ##5F6273;
+	background: #5F6273;
 }
 
 .content-box.color-effect-3 {
-	background: ##5F6273;
+	background: #5F6273;
 }
 
 .content-box.color-effect-4 {
-	background: ##5F6273;
+	background: #5F6273;
 }
 
 .box-icon-wrap {
