--- a/recruit-demo/css/style.css
+++ b/recruit-demo/css/style.css
@@ -4754,7 +4754,7 @@ ul.product-list li {
 
 #footer h3.footer {
 	color: #fff;
-	background: #606060;
+	background: #5F6273;
 	text-transform: uppercase;
 }
 
