--- a/recruit-demo/css/style.css
+++ b/recruit-demo/css/style.css
@@ -6664,6 +6664,7 @@ html[xmlns] .slides {display: block;}
 	background-color: #f8f8f8;
 	padding: 25px 30px;
 	margin: 0;
+	text-align:center;
 }
 
 .the-team-content h5,
