--- a/recruit-demo/css/style.css
+++ b/recruit-demo/css/style.css
@@ -6695,6 +6695,7 @@ html[xmlns] .slides {display: block;}
 	color: #ff530d;
 	font-size: 32px;
 	display: inline;
+	padding-left:23px;
 }
 
 .the-team-content span,
