--- a/recruit-demo/css/bootstrap.css
+++ b/recruit-demo/css/bootstrap.css
@@ -2813,6 +2813,7 @@ fieldset[disabled] .btn-default.active {
   color: #fff;
   background-color: #ff530d;
   border-color: #ff530d;
+  margin-left: 10px;
 }
 .btn-primary:hover,
 .btn-primary:focus,
