--- a/recruit-demo/css/base.css
+++ b/recruit-demo/css/base.css
@@ -158,7 +158,7 @@
 	.margin-top-0 { margin-top: 0 !important; }
 	.margin-top-5 { margin-top: 5px !important; }
 	.margin-top-10 { margin-top: 10px !important; }
-	.margin-top-15 { margin-top: 15px !important; }
+	.margin-top-15 { margin-top: 15px !important; color:#fff;}
 	.margin-top-20 { margin-top: 20px !important; }
 	.margin-top-25 { margin-top: 25px !important; }
 	.margin-top-30 { margin-top: 30px !important; }
