--- a/allianz/css/cs-override.css
+++ b/allianz/css/cs-override.css
@@ -1,1 +1,13 @@
 /*test*/
+
+/* Re-position the ">" attribute text so that it's in line with the attribute header text */
+ul li:before {
+  /* Line ">" up with the common left edges */
+  left: -4px;
+}
+a.dn-attr-v {
+  /* Allow left side spacing for the ">" */
+  padding-left: 15px;
+}
+
+/* When you click "more" on the dynamic navigation facet the styling is different */
