--- a/allianz/css/test2.css
+++ b/allianz/css/test2.css
@@ -1592,8 +1592,7 @@ ul li:before {
 
 /* Right align the remove filter button */
 .dn-r-img {
- left: auto;
- right: 0;
+ left: auto !important;
 }
 
 
