--- a/allianz/css/test2.css
+++ b/allianz/css/test2.css
@@ -1581,9 +1581,16 @@ td.download a{padding:0 7px 0 14px;background-position:0 -26px}
 /* CS Overrides */
 
 /* Re-position the ">" attribute text so that it's in line with the attribute header text */
+#dyn_nav li {
+ padding-left: 12px !important;
+}
+#dyn_nav .dn-attr-hdr {
+ padding-left: 0 !important;
+}
+
 ul li:before {
   /* Line ">" up with the common left edges */
-  /*left: -4px;*/
+  left: -4px;
 }
 .dn-attr-v {
   /* Allow left side spacing for the ">" */
