--- a/allianz/css/cs-override.css
+++ b/allianz/css/cs-override.css
@@ -239,7 +239,7 @@ td {
     position: relative;
 }
 .dn-attr-hdr {
-    color: 030303;
+    color: #030303;
 }
 #top_strip {
     width: 100%;
@@ -381,7 +381,6 @@ div.main-results-without-dn {
 .word_break {
     -ms-word-break: break-all;
     word-break: break-all;
-    word-break: break-word;
     -webkit-hyphens: auto;
     -moz-hyphens: auto;
     hyphens: auto;
