--- a/allianz/css/cs-styles.css
+++ b/allianz/css/cs-styles.css
@@ -144,7 +144,7 @@ body.previews-enabled div.result-item-hover {} body.previews-enabled div.result-
     background: transparent url("https://rawgit.com/stoneburnsoftware/gsa-resources/master/allianz/images/EL6BWzj.png") no-repeat;
     float: right;
 }
-.result-title, .doc-type-label{
+.result-title, .doc-type-label, .result-url{
 	float:left;
 }
 
