added padding to doc-type-label

--- a/allianz/css/cs-styles.css
+++ b/allianz/css/cs-styles.css
@@ -148,6 +148,11 @@ body.previews-enabled div.result-item-hover {} body.previews-enabled div.result-
 	float:left;
 }
 
+.doc-type-label{ 
+padding-right:7px;
+}
+
+
 div.result-item-hover span.toggle-preview {
     color: #0000cc;
     background-image: url("https://rawgit.com/stoneburnsoftware/gsa-resources/master/allianz/images/EL6BWzj.png") !important;
