--- a/allianz/css/cs-styles.css
+++ b/allianz/css/cs-styles.css
@@ -462,7 +462,7 @@ p.footer_copyright {
     float: left;
     color: #fff !important;
     text-decoration: none;
-    width: 22px;
+    min-width: 22px;
     height: 22px;
     background-color: #e5e5e5;
     padding: 3px 0;
@@ -475,7 +475,7 @@ p.footer_copyright {
     color: #333 !important;
     background: none !important;
     text-decoration: none;
-    width: 22px;
+    min-width: 22px;
     height: 22px;
     padding: 3px 0;
     line-height: 14px;
