--- a/allianz/css/cs-styles.css
+++ b/allianz/css/cs-styles.css
@@ -158,6 +158,7 @@ padding-right:7px;
 
  .result-url{
 	padding-bottom:5px;
+	word-break:break-all;
  }
 
 div.result-item-hover span.toggle-preview {
