--- a/allianz/css/dyn-nav.css
+++ b/allianz/css/dyn-nav.css
@@ -203,6 +203,9 @@
 			  float:left;
           }
 
+		  #dn_button {
+			display: none;
+		}
 		  
 @media all and (max-width: 650px) {
 
@@ -234,24 +237,14 @@
 	#dn_button {
 		padding: 12px 30px;
 		text-align: center;
-		border: 1px solid #4ab2db;
-		background: #4ab2db;
-		background: url(data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiA/Pgo8c3ZnIHhtbG5zPSJod…EiIGhlaWdodD0iMSIgZmlsbD0idXJsKCNncmFkLXVjZ2ctZ2VuZXJhdGVkKSIgLz4KPC9zdmc+);
-		background: -moz-linear-gradient(top, #4ab2db 0%, #3d9ecc 100%);
-		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #4ab2db), color-stop(100%, #3d9ecc));
-		background: -webkit-linear-gradient(top, #4ab2db 0%, #3d9ecc 100%);
-		background: -o-linear-gradient(top, #4ab2db 0%, #3d9ecc 100%);
-		background: -ms-linear-gradient(top, #4ab2db 0%, #3d9ecc 100%);
-		background: linear-gradient(to bottom, #4ab2db 0%, #3d9ecc 100%);
-		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4ab2db', endColorstr='#3d9ecc', GradientType=0 );
+		border: solid 1px #c9c9c9;
+		background-color: #003781;
 		display: block;
 		margin: 0 auto;
 		color: white;
 		font-size: 20px;
 		line-height: 20px;
 		margin-top: 20px;
-		border: 1px solid rgba(0, 0, 0, 0.0);
-		font-family: 'Source Sans Pro', sans-serif;
 		cursor:pointer;
 		clear:both;
 	}
@@ -262,4 +255,6 @@
 			border: 1px solid #357E9E;
 			color:#fff;
 		 }
+		 
+		 
 	}
