--- a/allianz/css/dyn-nav.css
+++ b/allianz/css/dyn-nav.css
@@ -226,11 +226,9 @@
           max-height:500px !important;
           overflow:scroll;
           overflow-x:hidden;
-          background-color:#f1faff !important;
      }
 
      .dn-attr {
-          background-color:#f1faff !important;
           margin-left:10px;
      }
 
@@ -249,12 +247,15 @@
 		clear:both;
 	}
 
-		 #dn_button:hover {
-			background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#3886A8), to(#3F96BB));
-			-webkit-box-shadow: 0px 0px 3px 2px rgba(0,0,0,0.1);
-			border: 1px solid #357E9E;
-			color:#fff;
-		 }
+	 #dn_button:hover {
+		background-color: #003781;
+		-webkit-box-shadow: 0px 0px 3px 2px rgba(0,0,0,0.1);
+		border: 1px solid #357E9E;
+		color:#fff;
+	 }
 		 
-		 
-	}
+	#filter_results_header {
+		margin-left: 0px !important;
+		}
+
+}
