--- a/allianz/css/dyn-nav.css
+++ b/allianz/css/dyn-nav.css
@@ -49,15 +49,15 @@
           list-style-type: none;
           vertical-align: middle;
           }
-          #dyn_nav li {
-          
-         
-         
-          }
+			
+			a.dn-attr-v {
+				/* Allow left side spacing for the ">" */
+				
+				padding-left: 5px;
+			}
           ul.dn-attr {
-          
           font-size: 0.875em;
-          margin: -10px 0 4px 6px;
+          margin: -10px 0 4px 0px;
           }
           ul.dn-attr-hidden {
           background: #FFF none repeat scroll 0 0;
