--- a/allianz/css/cs-overrides.css
+++ b/allianz/css/cs-overrides.css
@@ -53,3 +53,25 @@ ul li.dn-attr-v:before {
 #dyn_nav_col > ul > li {
  padding-left: 12px;
 }
+
+
+  
+/* Search Form Styling */
+
+#search_holder{
+  background: #e5e5e5;
+  background: url(data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiA/Pgo8c3ZnIHhtbG5zPSJod…IgaGVpZ2h0PSIxIiBmaWxsPSJ1cmwoI2dyYWQtdWNnZy1nZW5lcmF0ZWQpIiAvPgo8L3N2Zz4=);
+  background: -moz-linear-gradient(top,#e5e5e5 0,#eee 29%,#eee 29%);
+  background: -webkit-gradient(linear,left top,left bottom,color-stop(0%,#e5e5e5),color-stop(29%,#eee),color-stop(29%,#eee));
+  background: -webkit-linear-gradient(top,#e5e5e5 0,#eee 29%,#eee 29%);
+  background: -o-linear-gradient(top,#e5e5e5 0,#eee 29%,#eee 29%);
+  background: -ms-linear-gradient(top,#e5e5e5 0,#eee 29%,#eee 29%);
+  background: linear-gradient(to bottom,#e5e5e5 0,#eee 29%,#eee 29%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#e5e5e5',endColorstr='#eeeeee',GradientType=0);
+  background-image: url("https://test.allianzebroker.co.uk/etc/designs/common_foundation/default-styles/assets/images/static/sprites/repeatx-sdddf3a6062.png");
+  background-repeat: repeat-x;
+}
+
+
+
+
