--- a/allianz/css/cs-overrides.css
+++ b/allianz/css/cs-overrides.css
@@ -73,13 +73,12 @@ ul li.dn-attr-v:before {
   padding: 8px;
 }
 
-.searchForm{
+.searchform{
 	margin-top:5px;
 }
 
 .searchLabel{
   font-size: 0.9em;
-  padding-bottom:8px;
 }
 
 
