--- a/allianz/css/cs-overrides.css
+++ b/allianz/css/cs-overrides.css
@@ -71,6 +71,13 @@ ul li.dn-attr-v:before {
   background-image: url("https://test.allianzebroker.co.uk/etc/designs/common_foundation/default-styles/assets/images/static/sprites/repeatx-sdddf3a6062.png");
   background-repeat: repeat-x;
   padding: 8px;
+    content: "";
+  display: block;
+  width: 100%;
+  height: 1px;
+  background-position: 0 -408px;
+  background-repeat: repeat-x;
+  margin: 0;
 }
 
 .searchform{
