--- a/allianz/css/cs-overrides.css
+++ b/allianz/css/cs-overrides.css
@@ -68,17 +68,19 @@ ul li.dn-attr-v:before {
   background: -ms-linear-gradient(top,#e5e5e5 0,#eee 29%,#eee 29%);
   background: linear-gradient(to bottom,#e5e5e5 0,#eee 29%,#eee 29%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#e5e5e5',endColorstr='#eeeeee',GradientType=0);
-  background-image: url("https://test.allianzebroker.co.uk/etc/designs/common_foundation/default-styles/assets/images/static/sprites/repeatx-sdddf3a6062.png");
-  background-repeat: repeat-x;
+  
   padding: 8px;
   content: "";
   display: block;
   width: 100%;
-  height: 1px;
-  background-position: 0 -408px;
   margin: 0;
 }
 
+#search_holder:before, #search_holder:after{
+	background-image: url("https://test.allianzebroker.co.uk/etc/designs/common_foundation/default-styles/assets/images/static/sprites/repeatx-sdddf3a6062.png");
+	background-repeat: repeat-x;
+    background-position: 0 -408px;
+}
 .searchform{
 	margin-top:5px;
 }
