--- a/allianz/css/cs-overrides.css
+++ b/allianz/css/cs-overrides.css
@@ -80,6 +80,7 @@ ul li.dn-attr-v:before {
 	background-image: url("https://test.allianzebroker.co.uk/etc/designs/common_foundation/default-styles/assets/images/static/sprites/repeatx-sdddf3a6062.png");
 	background-repeat: repeat-x;
     background-position: 0 -408px;
+	height:1px;
 }
 .searchform{
 	margin-top:5px;
