--- a/allianz/css/cs-overrides.css
+++ b/allianz/css/cs-overrides.css
@@ -71,12 +71,16 @@ ul li.dn-attr-v:before {
   padding: 8px; 
 }
 
-#search_holder::before{
+#search_holder:before{
 	background-image: url("https://test.allianzebroker.co.uk/etc/designs/common_foundation/default-styles/assets/images/static/sprites/repeatx-sdddf3a6062.png");
-	background-repeat: repeat-x;
-    background-position: 0 -408px;
-	height:1px;
-	content: "";
+  content: "";
+  display: block;
+  position: absolute;
+  bottom: 0;
+  height: 1px;
+  width: 100%;
+  background-position: 0 -408px;
+  background-repeat: repeat-x;
 }
 .searchform{
 	margin-top:5px;
