--- a/allianz/css/cs-styles.css
+++ b/allianz/css/cs-styles.css
@@ -170,6 +170,7 @@ margin: 8px 0 4px;
   float: none;
   height: 27px;
   border: 1px solid #a7a7a7;
+  color:black;
 }
 
 /***** General Styles *****/
