--- a/allianz/css/cs-styles.css
+++ b/allianz/css/cs-styles.css
@@ -781,7 +781,7 @@ h2.themed-header {
   content: "";
   display: block;
   position: absolute;
-  top: 34px;
+bottom:15px;
   right: 10px;
   height: 19px;
   width: 19px;
