--- a/allianz/css/cs-overrides.css
+++ b/allianz/css/cs-overrides.css
@@ -94,12 +94,13 @@ border-width: 2px;
   font-weight: normal;
   font-size: .923076923077em;
   background: #f7f7f7;
-  padding: 5px 30px 5px 7px;
+  padding: 12px 33px 5px 7px;
   margin-top: 7px;
   font-style: italic;
   position: relative;
-  min-height: 38px;
-  top:11px;
+  height: 50px;
+  top:9px;
+  left:10px;
     border: 1px solid #edbd00;
 }
 
