--- a/allianz/css/cs-overrides.css
+++ b/allianz/css/cs-overrides.css
@@ -95,13 +95,13 @@ border-width: 2px;
   font-size: .923076923077em;
   background: #f7f7f7;
   padding: 12px 33px 5px 7px;
-  margin-top: 7px;
   font-style: italic;
   position: relative;
-  height: 50px;
+  height: 35px;
   top:9px;
-  left:10px;
-    border: 1px solid #edbd00;
+  border: 1px solid #edbd00;
+  display:block;
+  margin-bottom:5px;
 }
 
 span.error:before{
