--- a/lloyds/css/gsa-styles.css
+++ b/lloyds/css/gsa-styles.css
@@ -6,5 +6,14 @@
 	
 	
 	#inputfield{
-		width:50% !important;
+		width:59% !important;
 	}
+	
+	#keymatch_holder, #filter_tabs{
+		width: 520px;
+		float: right;
+		margin-top: 20px;
+		margin-left: 0;
+		margin-right: 0;
+	}
+	
