--- a/lloyds/css/suggestions.css
+++ b/lloyds/css/suggestions.css
@@ -17,6 +17,9 @@
     margin: 0;
     position: absolute;
     z-index: 99;
+	width: 454px !important;
+	left: 342.5px !important;
+	top: 230px !important;
 }
 .ss-gac-b {
     background: #36c;
